--- a/VnaviApp/package.json
+++ b/VnaviApp/package.json
@@ -18,6 +18,7 @@
     "@babel/core": "7.18.5",
     "@babel/runtime": "7.18.3",
     "@react-native-community/eslint-config": "2.0.0",
+    "axios": "^0.27.2",
     "babel-jest": "26.6.3",
     "eslint": "7.32.0",
     "jest": "26.6.3",
