--- a/VnaviApp/android/app/src/main/AndroidManifest.xml
+++ b/VnaviApp/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <!-- Include this only if you are planning to use the camera roll -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION" />
 
     <application
       android:name=".MainApplication"
