--- a/VnaviApp/package.json
+++ b/VnaviApp/package.json
@@ -10,9 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "base-64": "^0.1.0",
     "react": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-camera": "^4.2.1"
+    "react-native-camera": "^4.2.1",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "7.18.5",
