--- a/VnaviApp/package.json
+++ b/VnaviApp/package.json
@@ -25,6 +25,7 @@
     "eslint": "7.32.0",
     "jest": "26.6.3",
     "metro-react-native-babel-preset": "0.67.0",
+    "react-native-image-modal": "^2.0.4",
     "react-native-vector-icons": "^9.2.0",
     "react-test-renderer": "17.0.2"
   },
