--- a/VnaviApp/package.json
+++ b/VnaviApp/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/image-editor": "^2.3.0",
     "base-64": "^0.1.0",
     "react": "17.0.2",
     "react-native": "0.68.2",
