--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,6 +21,6 @@ jobs:
         cache: gradle
 
     - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+      run: chmod +x VnaviApp/android/gradlew
     - name: Build with Gradle
       run: cd VnaviApp && npm install && cd android && ./gradlew build
