--- a/vnavibackend/requirements.txt
+++ b/vnavibackend/requirements.txt
@@ -14,7 +14,7 @@ scipy>=1.4.1  # Google Colab version
 torch!=1.12.0
 torchvision!=0.13.0
 tqdm>=4.64.0
-protobuf<=3.20.1  # https://github.com/ultralytics/yolov5/issues/8012
+protobuf<=3.19.0  # https://github.com/ultralytics/yolov5/issues/8012
 
 # Logging -------------------------------------
 tensorboard>=2.4.1
@@ -41,4 +41,4 @@ thop  # FLOPs computation
 # pycocotools>=2.0  # COCO mAP
 # roboflow
 
-Werkzeug~=2.1.2
+Werkzeug>=2.2.0
