--- a/VnaviApp/package.json
+++ b/VnaviApp/package.json
@@ -15,6 +15,9 @@
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-camera": "^4.2.1",
+    "react-native-haptic-feedback": "^1.14.0",
+    "react-native-sound": "^0.11.2",
+    "react-native-tts": "^4.1.0",
     "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
